--- a/notebooks/Day_1/Basic_Motion/1-Basic_motion_using_Functions.ipynb
+++ b/notebooks/Day_1/Basic_Motion/1-Basic_motion_using_Functions.ipynb
@@ -87,7 +87,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**TASK 1:** Create a new cell by highlighting this cell and clicking the + icon. Once you've done that, type in the code that will make the robot turn left at 50% speed for two seconds"
+    "### Task 1: Turn the Jetbot left for 2 seconds    \n",
+    "-Create a new cell by highlighting this cell and clicking the + icon. Once you've done that, type in the code that will make the robot turn left at 50% speed for two seconds"
    ]
   },
   {
@@ -116,7 +117,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2) The second way of controlling the motors individually is by calling the *left_motor* and *right motor* attributes which are located at the Robot class and which are *Motor* class instances that contain a *value* attribute.\n",
+    "2) The second way of controlling the motors individually is by calling the *left_motor* and *right_motor* attributes which are located in the Robot class and which are *Motor* class instances that contain a *value* attribute.\n",
     "\n",
     "This *value* attribute is also known as a traitlet and is able to generate *events* when assigned a new value."
    ]
@@ -138,7 +139,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**TASK 2**: Create a function that will have the following commands on the Jetbot:\n",
+    "### Task 2: Create a function that will have the following commands on the Jetbot:   \n",
     "1) Move forward for 3 seconds   \n",
     "2) Stop the robot   \n",
     "3) Reverse for 2 seconds   \n",
@@ -154,7 +155,7 @@
    "source": [
     "### Task 3: Group Activity - Solving a maze\n",
     "\n",
-    "In groups of three, work together and write the code that would make the Jetbot move from the start of the maze up to the finish line! "
+    "In groups of three, work together and write the code that would make the Jetbot move from the start of the maze up until the finish line! "
    ]
   },
   {
