--- a/notebooks/Day_1/Basic_Motion/2-Basic_motion_using_UI.ipynb
+++ b/notebooks/Day_1/Basic_Motion/2-Basic_motion_using_UI.ipynb
@@ -116,7 +116,7 @@
    "source": [
     "Now as you drag the sliders, you should see the respective motor spin accordingly!\n",
     "\n",
-    "The *link* function that we created above actually creates a bi-directional link, which means that if we set the motor value elsewhere, the sliders will automatically update! To test this try the command below."
+    "The *link* function that we created above actually creates a bi-directional link, which means that if we set the motor values elsewhere, the sliders will automatically update! To test this, let's run the command below."
    ]
   },
   {
@@ -134,7 +134,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You should see the sliders abpve responding to the motor commands. If we want to remove this connection, we can call the *unlink* method below."
+    "You should see the sliders above responding to the motor commands. If we want to remove this connection, we can call the *unlink* method below."
    ]
   },
   {
@@ -151,7 +151,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If, you try moving the above sliders now, you will notice that the robot does not respond. But when setting the motors using a different method, the sliders will update and display the value."
+    "If you try moving the above sliders now, you will notice that the robot does not respond. But when setting the motors using a different method, the sliders will update and display the value."
    ]
   },
   {
@@ -162,7 +162,7 @@
     "\n",
     "Another way of using traitlets is by attaching functions (such as *forward* or *backward*) to events. These functions will get called whenever a change to the object occurs.\n",
     "\n",
-    "Let's create and display some buttons that we'll use to control the robot."
+    "To demonstrate, let's create and display some buttons that we'll use to control the robot."
    ]
   },
   {
@@ -228,7 +228,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we've defined the functions, let's attach them to the on-click events of each button"
+    "Now that we've defined the functions, let's attach them to the on-click events for each button"
    ]
   },
   {
@@ -250,7 +250,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now when you click the buttons, you should see the robot move!"
+    "Now when you click the above buttons, you should see the robot move accordingly!"
    ]
   },
   {
