--- a/notebooks/Day_1/Remote_Control/Remote_control.ipynb
+++ b/notebooks/Day_1/Remote_Control/Remote_control.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Remote Control\n",
     "\n",
-    "In this example we'll control the Jetbot remotely with a gamepad controller connected to our web browser machine."
+    "In this example notebook we'll control the Jetbot remotely by using a gamepad controller connected to our web browser machine and also learn how to display the live camera feed from our Jetbot so that we can see what our Jetbot is seeing!"
    ]
   },
   {
@@ -16,7 +16,7 @@
     "### Create gamepad controller\n",
     "\n",
     "The first thing we want to do is create an instance of the ``Controller`` widget, which we'll use to drive our robot.\n",
-    "The ``Controller`` widget takes a ``index`` parameter, which specifies the number of the controller.  This is useful in case you\n",
+    "The ``Controller`` widget takes an ``index`` parameter, which specifies the number of the controller.  This is useful in case you\n",
     "have multiple controllers attached, or some gamepads *appear* as multiple controllers.  To determine the index\n",
     "of the controller you're using,\n",
     "\n",
@@ -29,28 +29,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fe5e32e0173446f9858b986f41567c38",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Controller()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import ipywidgets.widgets as widgets\n",
     "\n",
-    "controller = widgets.Controller(index=0)  # replace with index of your controller\n",
+    "controller = widgets.Controller(index=0)  # replace with the index of your controller\n",
     "\n",
     "display(controller)"
    ]
@@ -99,42 +84,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Awesome! Our robot should now respond to our gamepad controller movements.  Now we want to view the live video feed from the camera!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d8ac5a3393644ffa98f6657c3cbc701a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Image(value=b'\\xff\\xd8\\xff\\xe0\\x00\\x10JFIF\\x00\\x01\\x01\\x00\\x00\\x01\\x00\\x01\\x00\\x00\\xff\\xdb\\x00C\\x00\\x02\\x01\\x0…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "from IPython.display import display\n",
-    "import ipywidgets\n",
-    "import traitlets\n",
-    "from jetbot import Camera, bgr8_to_jpeg\n",
+    "Awesome! Our robot should now respond to our gamepad controller movements.  Now we want to view the live video feed from the camera! To do that let's do the following:\n",
     "\n",
-    "camera=Camera.instance(width=224, height=224,fps=10)\n",
-    "\n",
-    "image = ipywidgets.Image()\n",
-    "\n",
-    "traitlets.dlink((camera, 'value'), (image, 'value'), transform=bgr8_to_jpeg)\n",
-    "\n",
-    "display(image)"
+    "### 1) Create a camera instance\n",
+    "First, let's create the camera instance, we call the instance method in the Camera class which will create our camera."
    ]
   },
   {
@@ -143,12 +96,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from IPython.display import display\n",
-    "import ipywidgets\n",
-    "import traitlets\n",
-    "from jetbot import Camera, bgr8_to_jpeg\n",
+    "from jetbot import Camera\n",
     "\n",
-    "camera = Camera.instance(width=224, height=224,fps=40)"
+    "camera=Camera.instance(width=224, height=224,fps=10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2) Create and display an image widget\n",
+    "Second, let's display an Image widget that we'll use to show our live camera feed. We'll set the height and width to just 300 pixels so it doesn't take up too much space."
    ]
   },
   {
@@ -157,13 +115,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import IPython\n",
+    "image_widget = widgets.Image(format='jpeg', width=300, height=300)\n",
     "\n",
-    "image = ipywidgets.Image()\n",
+    "display(image_widget)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3) Connect camera to our image widget\n",
     "\n",
-    "traitlets.dlink((camera, 'value'), (image, 'value'), transform=bgr8_to_jpeg)\n",
+    "Third, let's set a *value* attribute to the image widget and to the camera class and attach the *value* attribute of the camera to the *value* attribute of the image.\n",
     "\n",
-    "display(image)"
+    "Our camera class currently only produces values in BGR8 (blue, green, red, 8bit) format, while our image widget accepts values in compressed JPEG. To connect the camera to the image we need to insert the bgr8_to_jpeg function as a transform in the link. We do this below"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from jetbot import bgr8_to_jpeg\n",
+    "\n",
+    "camera_link = traitlets.dlink((camera, 'value'), (image, 'value'), transform=bgr8_to_jpeg)"
    ]
   },
   {
@@ -172,7 +148,7 @@
    "source": [
     "### Save snapshots with gamepad button\n",
     "\n",
-    "Now, we'd like to be able to save some images from our robot.  Let's make it so the right bumper (index 5) saves a snapshot of the current live image.  We'll save the images in the ``snapshots/``directory, with a name that is guaranteed to be unique using the ``uuid`` python package.  We use the ``uuid1`` identifier, because this also encodes the date and MAC address which we might want to use later."
+    "Now, we'd like to be able to save some images from our robot.  Let's make it so that the right bumper (index 5) saves a snapshot of the current live image.  We'll save the images in the ``snapshots/``directory, with a name that is guaranteed to be unique using the ``uuid`` python package.  We use the ``uuid1`` identifier, because this also encodes the date and MAC address which we might want to use later."
    ]
   },
   {
@@ -193,17 +169,17 @@
     "    if change['new']:\n",
     "        file_path = 'snapshots/' + str(uuid.uuid1()) + '.jpg'\n",
     "        \n",
-    "        # write snapshot to file (we use image value instead of camera because it's already in JPEG format)\n",
+    "        # write snapshot to file (we use image widget value instead of camera because it's already in JPEG format)\n",
     "        with open(file_path, 'wb') as f:\n",
-    "            f.write(image.value)\n",
+    "            f.write(image_widget.value)\n",
     "            \n",
     "        # display snapshot that was saved\n",
-    "        snapshot_image.value = image.value\n",
+    "        snapshot_image.value = image_widget.value\n",
     "\n",
     "\n",
     "controller.buttons[5].observe(save_snapshot, names='value')\n",
     "\n",
-    "display(widgets.HBox([image, snapshot_image]))\n",
+    "display(widgets.HBox([image_widget, snapshot_image]))\n",
     "display(controller)"
    ]
   },
@@ -223,7 +199,6 @@
    "outputs": [],
    "source": [
     "from jetbot import Heartbeat\n",
-    "\n",
     "\n",
     "def handle_heartbeat_status(change):\n",
     "    if change['new'] == Heartbeat.Status.dead:\n",
@@ -275,7 +250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
