--- a/notebooks/Day_2/Collision_Avoidance/1-Data_collection.ipynb
+++ b/notebooks/Day_2/Collision_Avoidance/1-Data_collection.ipynb
@@ -6,15 +6,15 @@
    "source": [
     "# Collision Avoidance - Data Collection\n",
     "\n",
-    "If you ran through the basic motion notebook, hopefully you're enjoying how easy it can be to make your Jetbot move around! Thats very cool!  But what's even cooler, is making JetBot move around all by itself! \n",
+    "If you ran through the Day 1 notebook, hopefully you're enjoying how easy it can be to make your Jetbot move around using functions, widgets and even a controller! Thats very cool!  But what's even cooler, is making your Jetbot move around all by itself! \n",
     "\n",
-    "The goal of the Collision Avodaince task is to allow the Jetbot to move around freely until it comes across a \"dangerous situation\" then it will turn around (Avoid Collision) and continue on moving freely.\n",
+    "The goal of the Collision Avodaince task is to allow the Jetbot to move around freely until it comes across a \"dangerous situation\" then it will turn around (avoiding collision) and continue on moving freely.\n",
     "\n",
     "To do this, Firstly, we'll manually place the robot in scenarios where it's \"safety bubble\" is violated, and label these scenarios as ``blocked``.  We save a snapshot of what the robot sees along with this label.\n",
     "\n",
     "Second, we'll manually place the robot in scenarios where it's safe to move forward, and label these scenarios as ``free``.  Likewise, we save a snapshot along with this label.\n",
     "\n",
-    "That's all that we'll be doing in this notebook \"**data collection**\".  Once we have lots of images and labels, we'll upload this data to a GPU enabled machine where we'll *train* a neural network to predict whether the robot's safety bubble is being violated based off of the image it sees.  We'll use this to implement a simple collision avoidance behavior in the end :)"
+    "That's all that we'll be doing in this notebook, \"**data collection**\".  Once we have collected lots of images for the 2 classes, we'll upload this data to a GPU enabled machine where we'll *train* a neural network to predict whether the robot's safety bubble is being violated based off of the image it sees.  We'll use this to implement a simple collision avoidance behavior in the end :)"
    ]
   },
   {
@@ -23,7 +23,7 @@
    "source": [
     "## Display live camera feed\n",
     "\n",
-    "So let's get started.  First, let's initialize and display our camera like we did in the *Remote_control* notebook. \n",
+    "So let's get started.  First, let's initialize and display our camera like we did in the *Remote_control* notebook in Day 1. \n",
     "\n",
     "> Our neural network takes a 224x224 pixel image as input.  We'll set our camera to that size to minimize the filesize of our dataset.\n",
     "> In some scenarios it may be better to collect data in a larger image size and downscale to the desired size later."
@@ -42,19 +42,18 @@
     "\n",
     "camera = Camera.instance(width=224, height=224)\n",
     "\n",
-    "image = widgets.Image(format='jpeg', width=224, height=224)  # this width and height doesn't necessarily have to match the camera\n",
+    "image_widget = widgets.Image(format='jpeg', width=224, height=224) \n",
     "\n",
-    "camera_link = traitlets.dlink((camera, 'value'), (image, 'value'), transform=bgr8_to_jpeg)\n",
+    "camera_link = traitlets.dlink((camera, 'value'), (image_widget, 'value'), transform=bgr8_to_jpeg)\n",
     "\n",
-    "display(image)"
+    "display(image_widget)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Awesome, next let's create a few directories where we'll store all our data.  We'll create a folder ``dataset`` that will contain two sub-folders ``free`` and ``blocked``, \n",
-    "where we'll place the images for each scenario."
+    "Awesome, next let's create a few directories where we will use to store all our data.  We'll create a folder named ``dataset`` that will contain two sub-folders ``free`` and ``blocked``, where we will place the images for each scenario."
    ]
   },
   {
@@ -80,8 +79,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you refresh the Jupyter file browser on the left, you should now see those directories appear.  Next, let's create and display some buttons that we'll use to save snapshots\n",
-    "for each class label.  We'll also add some text boxes that will display how many images of each category that we've collected so far. This is useful because we want to make\n",
+    "If you refresh the Jupyter file browser on the left, you should now see those directories appear.  Next, let's create and display some buttons which we'll use to save snapshots for each class label.  We'll also add some text boxes that will display how many images of each category that we've collected so far. This is useful because we want to make\n",
     "sure we collect about as many ``free`` images as ``blocked`` images.  It also helps to know how many images we've collected overall."
    ]
   },
@@ -150,13 +148,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Great! now lets display our camera image together with our buttons which we just created so that we can have a better view of what our Jetbot is seeing.\n",
-    "\n",
-    "Now go ahead and collect some data! \n",
-    "\n",
-    "1. Place the robot in a scenario where it's blocked and press ``add blocked``\n",
-    "2. Place the robot in a scenario where it's free and press ``add free``\n",
-    "3. Repeat 1, 2 "
+    "Great! now lets display our camera image together with our buttons which we just created so that we can have a better view of what our Jetbot is seeing."
    ]
   },
   {
@@ -174,17 +166,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**TASK 1:** \n",
-    "- Move around and collect atleast 100 images for each class \"blocked\" and \"free\". \n",
-    "- Make sure to capture images using varying orientations and different lighting conditions.\n",
-    "- For collision types, you can add: walls, objects, etc."
+    "Now let's go ahead and collect some data!\n",
+    "\n",
+    "### Task 1: Collect Image Classification Data   \n",
+    "- Move around and collect atleast 100 images for each class ``blocked`` and ``free``. \n",
+    "- For the ``Blocked`` class capture images of objects that you observe in the room such as walls, objects, etc.\n",
+    "- For the ``Free`` class capture scenarios where the Jetbot is safe to move around in such as floors, carpets, etc.\n",
+    "- Make sure to capture images using varying orientations and different lighting conditions."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Save dataset in a zip\n",
+    "## Save dataset in a zip (optional)\n",
     "\n",
     "Once you've collected enough data, we can choose to copy that data to a GPU desktop or cloud machine for training. To do that, we can call the following *terminal* command to compress\n",
     "our dataset folder into a single *zip* file.\n",
@@ -214,7 +209,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, Let's move on to the \"train_model.ipynb\" notebook so that we can start training our model on the collected dataset!"
+    "Next, Let's move on to the \"2-Train_model.ipynb\" notebook so that we can start training our model on the collected dataset!"
    ]
   }
  ],
@@ -234,7 +229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
