--- a/notebooks/Day_2/Collision_Avoidance/2-Train_model.ipynb
+++ b/notebooks/Day_2/Collision_Avoidance/2-Train_model.ipynb
@@ -6,16 +6,16 @@
    "source": [
     "# Collision Avoidance - Train Model\n",
     "\n",
-    "In this notebook we'll train our image classifier to detect two classes ``free`` and ``blocked``, which we'll use for avoiding collisions.  For this, we'll use a popular deep learning library known as *PyTorch*"
+    "In this notebook we'll use the dataset we collected to train an image classifier to detect two classes ``free`` and ``blocked``, which we'll use to help the Jetbot to avoid collisions.  For this, we'll use a popular deep learning library known as *PyTorch*."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Upload and extract dataset\n",
+    "### Upload and extract dataset (optional)\n",
     "\n",
-    "If you want to train your model using an external PC, before starting you should first upload the *dataset.zip* file that you created in the *data_collection.ipynb* notebook on this directory.\n",
+    "If you are training your model using an external GPU device, before starting you should first upload the *dataset.zip* file that you created in the *Data_collection.ipynb* notebook onto your local directory.\n",
     "\n",
     "You should then extract the dataset by using the command below\n",
     "\n",
@@ -116,12 +116,14 @@
     "    train_dataset,\n",
     "    batch_size=8,\n",
     "    shuffle=True,\n",
+    "    num_workers=0,\n",
     ")\n",
     "\n",
     "test_loader = torch.utils.data.DataLoader(\n",
     "    test_dataset,\n",
     "    batch_size=8,\n",
     "    shuffle=True,\n",
+    "    num_workers=0,\n",
     ")"
    ]
   },
@@ -135,7 +137,7 @@
     "\n",
     "In a process called *transfer learning*, we can repurpose a pre-trained model (trained on millions of images) for a new task that has possibly much less data available.\n",
     "\n",
-    "Important features that were learned in the original training of the pre-trained model are re-usable for the new task.  We'll use the ``resnet18`` model."
+    "Important features that were learned in the original training of the pre-trained model are re-usable for the new task.  We'll use the ``resnet18`` model here."
    ]
   },
   {
@@ -246,7 +248,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
