--- a/notebooks/Day_2/Collision_Avoidance/3-Optimize_model_trt.ipynb
+++ b/notebooks/Day_2/Collision_Avoidance/3-Optimize_model_trt.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "## Load the trained model\n",
     "\n",
-    "We'll assume you already have the ``best_collision_model.pth`` at your workstation which you created from the *train_model* notebook. If you trained using an external PC, you should upload the model into this notebook's directory by using the Jupyter Lab upload tool.\n",
+    "We'll assume you already have the ``best_collision_model.pth`` at your workstation which you created from the *Train_model* notebook. If you trained using an external GPU device, you should upload that model into this notebook's directory by using the Jupyter Lab upload tool.\n",
     "\n",
     "Execute the code below to initialize the PyTorch model.  This should look very familiar to that from the training notebook."
    ]
@@ -111,7 +111,7 @@
    "source": [
     "## Next\n",
     "\n",
-    "Next, let's open the live_demo.ipynb so that we can move the JetBot with the TensorRT optimized model."
+    "Next, let's open the Live_demo.ipynb notebook so that we can move our Jetbot using the TensorRT optimized model we just created."
    ]
   }
  ],
@@ -131,7 +131,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
