--- a/notebooks/Day_2/Collision_Avoidance/4-Live_demo.ipynb
+++ b/notebooks/Day_2/Collision_Avoidance/4-Live_demo.ipynb
@@ -107,7 +107,8 @@
     "import ipywidgets.widgets as widgets\n",
     "from jetbot import Camera, bgr8_to_jpeg\n",
     "\n",
-    "camera = Camera.instance(width=224, height=224)\n",
+    "camera = Camera.instance(width=224, height=224, fps=10)\n",
+    "\n",
     "image = widgets.Image(format='jpeg', width=224, height=224)\n",
     "\n",
     "camera_link = traitlets.dlink((camera, 'value'), (image, 'value'), transform=bgr8_to_jpeg)\n",
@@ -157,6 +158,7 @@
     "\n",
     "def update(change):\n",
     "    global blocked_slider, robot\n",
+    "    \n",
     "    x = change['new'] \n",
     "    x = preprocess(x)\n",
     "    y = model_trt(x)\n",
@@ -287,7 +289,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
