--- a/notebooks/Day_1/Remote_Control/Remote_control.ipynb
+++ b/notebooks/Day_1/Remote_Control/Remote_control.ipynb
@@ -139,7 +139,7 @@
    "source": [
     "from jetbot import bgr8_to_jpeg\n",
     "\n",
-    "camera_link = traitlets.dlink((camera, 'value'), (image, 'value'), transform=bgr8_to_jpeg)"
+    "camera_link = traitlets.dlink((camera, 'value'), (image_widget, 'value'), transform=bgr8_to_jpeg)"
    ]
   },
   {
