--- a/notebooks/Day_3/Road_Following/4-Live_demo.ipynb
+++ b/notebooks/Day_3/Road_Following/4-Live_demo.ipynb
@@ -99,7 +99,7 @@
    "source": [
     "import traitlets\n",
     "from IPython.display import display\n",
-    "import ipywidgets.widgets as widgets\n",
+    "import ipywidgets\n",
     "from jetbot import Camera, bgr8_to_jpeg\n",
     "\n",
     "camera=Camera.instance(width=224, height=224, fps=10)"
