--- a/notebooks/Day_3/Road_Following/2-Train_model.ipynb
+++ b/notebooks/Day_3/Road_Following/2-Train_model.ipynb
@@ -74,13 +74,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_x(path):\n",
+    "def get_x(path, width):\n",
     "    \"\"\"Gets the x value from the image filename\"\"\"\n",
-    "    return (float(int(path[3:6])) - 50.0) / 50.0\n",
+    "    return (float(int(path.split(\"_\")[1])) - width/2) / (width/2)\n",
     "\n",
-    "def get_y(path):\n",
+    "def get_y(path, height):\n",
     "    \"\"\"Gets the y value from the image filename\"\"\"\n",
-    "    return (float(int(path[7:10])) - 50.0) / 50.0\n",
+    "    return (float(int(path.split(\"_\")[2])) - height/2) / (height/2)\n",
     "\n",
     "class XYDataset(torch.utils.data.Dataset):\n",
     "    \n",
@@ -97,9 +97,10 @@
     "        image_path = self.image_paths[idx]\n",
     "        \n",
     "        image = PIL.Image.open(image_path)\n",
-    "        x = float(get_x(os.path.basename(image_path)))\n",
-    "        y = float(get_y(os.path.basename(image_path)))\n",
-    "        \n",
+    "        width, height = image.size\n",
+    "        x = float(get_x(os.path.basename(image_path), width))\n",
+    "        y = float(get_y(os.path.basename(image_path), height))\n",
+    "      \n",
     "        if float(np.random.rand(1)) > 0.5:\n",
     "            image = transforms.functional.hflip(image)\n",
     "            x = -x\n",
@@ -226,7 +227,7 @@
    "source": [
     "### Train the neural network\n",
     "\n",
-    "Using the code below we will train the neural network for 70 epochs, saving the best performing model after each epoch."
+    "Using the code below we will train the neural network for 50 epochs, saving the best performing model after each epoch."
    ]
   },
   {
@@ -235,7 +236,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "NUM_EPOCHS = 70\n",
+    "NUM_EPOCHS = 50\n",
     "BEST_MODEL_PATH = 'best_road_model.pth'\n",
     "best_loss = 1e9\n",
     "\n",
