--- a/notebooks/Day_4/RoadFollowing+CollisionAvoidance.ipynb
+++ b/notebooks/Day_4/RoadFollowing+CollisionAvoidance.ipynb
@@ -125,7 +125,7 @@
     "import traitlets\n",
     "from jetbot import Camera, bgr8_to_jpeg\n",
     "\n",
-    "camera = Camera.instance(width=224, height=224, fps=10)"
+    "camera = Camera.instance(width=224, height=224, fps=5)"
    ]
   },
   {
@@ -183,15 +183,15 @@
    "source": [
     "#Road Following sliders\n",
     "speed_control_slider = ipywidgets.FloatSlider(min=0.0, max=1.0, step=0.01, description='speed control')\n",
-    "steering_gain_slider = ipywidgets.FloatSlider(min=0.0, max=1.0, step=0.01, value=0.10, description='steering gain')\n",
-    "steering_dgain_slider = ipywidgets.FloatSlider(min=0.0, max=0.5, step=0.001, value=0.23, description='steering kd')\n",
+    "steering_gain_slider = ipywidgets.FloatSlider(min=0.0, max=1.0, step=0.01, value=0.04, description='steering gain')\n",
+    "steering_dgain_slider = ipywidgets.FloatSlider(min=0.0, max=0.5, step=0.001, value=0.0, description='steering kd')\n",
     "steering_bias_slider = ipywidgets.FloatSlider(min=-0.3, max=0.3, step=0.01, value=0.0, description='steering bias')\n",
     "\n",
     "display(speed_control_slider, steering_gain_slider, steering_dgain_slider, steering_bias_slider)\n",
     "\n",
     "#Collision Avoidance sliders\n",
     "blocked_slider = ipywidgets.FloatSlider(min=0.0, max=1.0, orientation='horizontal', description='blocked')\n",
-    "stopduration_slider= ipywidgets.IntSlider(min=1, max=1000, step=1, value=20, description='time for stop') \n",
+    "stopduration_slider= ipywidgets.IntSlider(min=1, max=1000, step=1, value=10, description='time for stop') \n",
     "blocked_threshold= ipywidgets.FloatSlider(min=0, max=1.2, step=0.01, value=0.8, description='blocked threshold')\n",
     "\n",
     "display(image_widget)\n",
@@ -227,12 +227,12 @@
     "stop_time=20 #number of frames to remain stopped\n",
     "x=0.0\n",
     "y=0.0\n",
+    "speed_value=speed_control_slider.value\n",
     "\n",
     "def execute(change):\n",
-    "    global angle, angle_last, blocked_slider, robot,count_stops, stop_time,go_on,x,y,blocked_threshold\n",
+    "    global angle, angle_last, blocked_slider, robot,count_stops, stop_time, go_on, x, y, blocked_threshold\n",
     "    global speed_value, steer_gain, steer_dgain, steer_bias\n",
-    "        \n",
-    "    speed_value=speed_control_slider.value        \n",
+    "                \n",
     "    steer_gain=steering_gain_slider.value\n",
     "    steer_dgain=steering_dgain_slider.value\n",
     "    steer_bias=steering_bias_slider.value\n",
@@ -247,7 +247,7 @@
     "    stop_time=stopduration_slider.value\n",
     "    \n",
     "    if go_on==1:    \n",
-    "        if prob_blocked > block_threshold.value: # threshold should be above 0.5,\n",
+    "        if prob_blocked > blocked_threshold.value: # threshold should be above 0.5,\n",
     "            go_on=2\n",
     "        else:\n",
     "            #start of road following detection\n",
@@ -272,7 +272,7 @@
     "    pid =angle * steer_gain + (angle - angle_last) * steer_dgain\n",
     "    steer_val = pid + steer_bias \n",
     "    angle_last = angle\n",
-    "    robot.left_motor.value = max(min(speed_value + steer_val, 1.0), 0.0)\n",
+    "    robot.left_motor.value = max(min(speed_value + steer_val, 1.0)*0.88, 0.0)\n",
     "    robot.right_motor.value = max(min(speed_value - steer_val, 1.0), 0.0) \n",
     "\n",
     "execute({'new': camera.value})"
