Update live demo notebook

--- a/notebooks/Day_3/Road_Following/4-Live_demo.ipynb
+++ b/notebooks/Day_3/Road_Following/4-Live_demo.ipynb
@@ -43,7 +43,7 @@
     "from torch2trt import TRTModule\n",
     "\n",
     "model_trt = TRTModule()\n",
-    "model_trt.load_state_dict(torch.load('best_steering_model_xy_trt.pth'))"
+    "model_trt.load_state_dict(torch.load('best_road_model_trt.pth'))"
    ]
   },
   {
@@ -157,7 +157,7 @@
    "outputs": [],
    "source": [
     "speed_control_slider = ipywidgets.FloatSlider(min=0.0, max=1.0, step=0.01, description='speed gain')\n",
-    "steering_gain_slider = ipywidgets.FloatSlider(min=0.0, max=1.0, step=0.01, value=0.2, description='steering gain')\n",
+    "steering_gain_slider = ipywidgets.FloatSlider(min=0.0, max=1.0, step=0.01, value=0.04, description='steering gain')\n",
     "steering_dgain_slider = ipywidgets.FloatSlider(min=0.0, max=0.5, step=0.001, value=0.0, description='steering kd')\n",
     "steering_bias_slider = ipywidgets.FloatSlider(min=-0.3, max=0.3, step=0.01, value=0.0, description='steering bias')\n",
     "\n",
@@ -225,7 +225,7 @@
     "    \n",
     "    steering_slider.value = pid + steering_bias_slider.value\n",
     "    \n",
-    "    robot.left_motor.value = max(min(speed_slider.value + steering_slider.value, 1.0), 0.0)\n",
+    "    robot.left_motor.value = max(min(speed_slider.value + steering_slider.value, 1.0)*0.88, 0.0)\n",
     "    robot.right_motor.value = max(min(speed_slider.value - steering_slider.value, 1.0), 0.0)\n",
     "    \n",
     "execute({'new': camera.value})"
